# ostiary

./: CHANGELOG  CREDITS  INSTALL  Makefile.in  Makefile.orig  TODO  changelog.new  changelog.old  config.h.in  configure  configure.in  ost.h  ost_cfgparse.c  ost_cfgparse.h  ost_client.c  ost_debug.c  ost_debug.h  ost_forced_memset.c  ost_forced_memset.h  ost_getpass.c  ost_getpass.h  ost_globals.h  ost_hash.c  ost_hash.h  ost_ipcache.c  ost_ipcache.h  ost_main.c  ost_runcmd.c  ost_runcmd.h  ostiary.spec  ostiary.spec.in  sha-256.c  sha-256.h
debian/: changelog  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  ostiary.default.ex  ostiary.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/ostiary/DEBIAN/: control  md5sums
debian/ostiary/usr/share/doc/ostiary/: HASHES  README  README.Debian
man/man1/: ostclient.1
man/man5/: ostiary.cfg.5
man/man8/: ostiaryd.8
samples/: disable-ssh-tcpd.sh  enable-ssh-tcpd.sh  restart-ost-psef.sh  restart-ost.sh
tests/: Makefile  find_secret.c  test0.sh  test1.sh  uidtest.c
winclient/: win_config.h  win_getopt.c  win_getopt.h  winclient.dsp  winclient.dsw
