#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(ostiary, 4.0, sorceror171@gmail.com)
AC_CONFIG_SRCDIR([ost_forced_memset.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/socket.h sys/time.h syslog.h termios.h unistd.h libgen.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_C_VOLATILE

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([atexit gethostbyname getdtablesize inet_ntoa memset memcpy mlock select sigaction socket strchr dirname])
AC_CHECK_FUNC(inet_aton, , AC_CHECK_LIB(resolv, inet_aton))
dnl AC_CHECK_FUNC(inet_ntoa, , AC_CHECK_LIB(nsl, inet_ntoa))
AC_CHECK_FUNC(gethostbyname, , AC_CHECK_LIB(nsl, gethostbyname))
AC_CHECK_FUNC(setsockopt, , AC_CHECK_LIB(socket, setsockopt))
AC_CHECK_FUNC(recv, , AC_CHECK_LIB(socket, recv))
AC_CHECK_FUNC(send, , AC_CHECK_LIB(socket, send))
AC_CHECK_FUNC(connect, , AC_CHECK_LIB(socket, connect))
AC_CHECK_FUNC(mlock, , AC_CHECK_LIB(rt, mlock))

#--------------------------------------------------------------------
# Check for TCP wrapper support, code taken from apcupsd, Jan 2004
#--------------------------------------------------------------------
AC_ARG_WITH(libwrap,
  [  --with-libwrap[=DIR]     Compile in libwrap (tcp_wrappers) support (DIR optional)],
  [
    if test "x$withval" != "xno" ; then
       saved_LIBS="$LIBS"
       LIBS="$saved_LIBS -lwrap"
       AC_MSG_CHECKING(for libwrap)
       AC_TRY_LINK(
          [ #include <tcpd.h>
             int deny_severity = 0;
             int allow_severity = 0;
             struct request_info *req; ],
          [ hosts_access(req); ],
          [
            AC_MSG_RESULT(yes)
            AC_DEFINE(HAVE_LIBWRAP, 1, [Define if using libwrap (tcp wrappers).])
            TCPW_MSG="yes"
            LIBWRAP_LDFLAG="-lwrap"
          ], [
            LIBS="$saved_LIBS -lwrap -lnsl"
            AC_TRY_LINK(
              [ #include <tcpd.h>
                 int deny_severity = 0;
                 int allow_severity = 0;
                 struct request_info *req; ],
              [ hosts_access(req); ],
              [
                 AC_MSG_RESULT(yes)
                 AC_DEFINE(HAVE_LIBWRAP)
                 TCPW_MSG="yes"
                 LIBWRAP_LDFLAG="-lwrap"
              ],
              [AC_MSG_ERROR([*** libwrap missing]) ] ]
            )
       )
       LIBS="$saved_LIBS"
    fi
  ]
)

AC_SUBST(LIBWRAP_LDFLAG)

AC_CONFIG_FILES([Makefile ostiary.spec])
AC_OUTPUT
